--- a/src/styles/scss/_SearchBar.scss
+++ b/src/styles/scss/_SearchBar.scss
@@ -14,27 +14,27 @@
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  input {
-    width: 100%;
-    height: 32px;
-    padding: 0 6px;
-    font-size: large;
-    border-radius: 4px;
-    border-style: none;
-    &:focus-visible {
-      outline: none;
+    input {
+      width: 100%;
+      height: 32px;
+      padding: 0 6px;
+      font-size: large;
+      border-radius: 4px;
+      border-style: none;
+      // &:focus-visible {
+      //   outline: auto;
+      // }
+      &:focus:not(:focus-visible) {
+        background: lime; /* undo gold */
+      }
     }
-  }
-  &:focus-visible {
-    border: inset;
-    outline: inset;
-  }
-  label {
-    font-size: large;
-  }
-  i {
-    color: #333333;
+    &:focus-visible {
+      border: inset;
+      outline: inset;
+    }
+    label {
+      font-size: large;
+    }
   }
 }
 
@@ -48,11 +48,9 @@
 }
 
 @media screen and (min-width: 768px) {
-
 }
 
 @media screen and (min-width: 1024px) {
-
 }
 
 @media screen and (min-width: 1200px) {
