--- a/src/styles/scss/_MovieList.scss
+++ b/src/styles/scss/_MovieList.scss
@@ -26,11 +26,55 @@
   }
 }
 
+@media screen and (min-width: 576px) and (min-height: 576px) {
+  .movie-list {
+    grid-template-columns: repeat(auto-fill, minmax(31%, 1fr));
+  }
+}
+
 @media screen and (min-width: 768px) {
   .movie-list {
     grid-template-columns: repeat(auto-fill, minmax(23%, 1fr));
   }
 }
+
+//Mobile portrait mode styling
+@media screen and (min-width: 375px) and (max-height: 450px) {
+  .movie-list {
+    grid-template-columns: repeat(auto-fill, minmax(45%, 1fr));
+    grid-gap: 30px 10%;
+  }
+}
+
+/* surface pro screen size */
+@media screen and (min-width: 540px) and (max-height: 720px) {
+  .movie-list {
+    grid-template-columns: repeat(auto-fill, minmax(17%, 1fr));
+    grid-gap: 30px 4%;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-height: 450px) {
+  .movie-list {
+    grid-template-columns: repeat(auto-fill, minmax(22%, 1fr));
+    grid-gap: 30px 4%;
+  }
+}
+
+@media screen and (min-width: 720px) and (max-height: 550px) {
+  .movie-list {
+    grid-template-columns: repeat(auto-fill, minmax(22%, 1fr));
+    grid-gap: 30px 4%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-height: 450px) {
+  .movie-list {
+    grid-template-columns: repeat(auto-fill, minmax(12%, 1fr));
+    grid-gap: 30px 6%;
+  }
+}
+//*******************************************
 
 @media screen and (min-width: 1024px) {
   .movie-list {
