--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -63,7 +63,7 @@ p {
   margin: 5px 0;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (min-height: 768px) {
   .container {
     width: 73%;
     padding: 30px 40px;
@@ -111,10 +111,58 @@ p {
   }
 }
 
+@media screen and (min-width: 576px) and (min-height: 576px) {
+  .movie-list {
+    -ms-grid-columns: (minmax(31%, 1fr))[auto-fill];
+        grid-template-columns: repeat(auto-fill, minmax(31%, 1fr));
+  }
+}
+
 @media screen and (min-width: 768px) {
   .movie-list {
     -ms-grid-columns: (minmax(23%, 1fr))[auto-fill];
         grid-template-columns: repeat(auto-fill, minmax(23%, 1fr));
+  }
+}
+
+@media screen and (min-width: 375px) and (max-height: 450px) {
+  .movie-list {
+    -ms-grid-columns: (minmax(45%, 1fr))[auto-fill];
+        grid-template-columns: repeat(auto-fill, minmax(45%, 1fr));
+    grid-gap: 30px 10%;
+  }
+}
+
+/* surface pro screen size */
+@media screen and (min-width: 540px) and (max-height: 720px) {
+  .movie-list {
+    -ms-grid-columns: (minmax(17%, 1fr))[auto-fill];
+        grid-template-columns: repeat(auto-fill, minmax(17%, 1fr));
+    grid-gap: 30px 4%;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-height: 450px) {
+  .movie-list {
+    -ms-grid-columns: (minmax(22%, 1fr))[auto-fill];
+        grid-template-columns: repeat(auto-fill, minmax(22%, 1fr));
+    grid-gap: 30px 4%;
+  }
+}
+
+@media screen and (min-width: 720px) and (max-height: 550px) {
+  .movie-list {
+    -ms-grid-columns: (minmax(22%, 1fr))[auto-fill];
+        grid-template-columns: repeat(auto-fill, minmax(22%, 1fr));
+    grid-gap: 30px 4%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-height: 450px) {
+  .movie-list {
+    -ms-grid-columns: (minmax(12%, 1fr))[auto-fill];
+        grid-template-columns: repeat(auto-fill, minmax(12%, 1fr));
+    grid-gap: 30px 6%;
   }
 }
 
@@ -251,9 +299,7 @@ p {
   display: flex;
   width: 100%;
   height: 40px;
-  padding: 0 13px;
   margin: 20px 0;
-  background-color: white;
   color: black;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -275,6 +321,34 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.search-bar form .search-input {
+  padding: 0 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: white;
+  border-radius: 15px;
+  width: 100%;
+}
+
+.search-bar form .search-submit {
+  display: none;
+  border-radius: 15px;
+  height: 32px;
+  padding: 0 18px;
+  border: 3px solid white;
+  font-size: inherit;
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: 600;
+}
+
+.search-bar form .search-submit:hover {
+  border: 3px solid #eebc16;
 }
 
 .search-bar form input {
@@ -300,9 +374,24 @@ p {
   font-size: large;
 }
 
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 568px) and (max-height: 550px) {
   .search-bar {
-    width: 400px;
+    width: 55%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .search-bar {
+    width: 55%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .search-bar form .search-input {
+    margin-right: 10px;
+  }
+  .search-bar form .search-submit {
+    display: block;
   }
 }
 
@@ -419,7 +508,7 @@ p {
   display: flex;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (min-height: 768px) {
   .nominations-list {
     display: block;
   }
@@ -552,7 +641,7 @@ p {
   margin: 15px;
 }
 
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 576px) and (min-height: 576px) {
   .navbar {
     display: none;
   }
