--- a/src/styles/scss/_Global.scss
+++ b/src/styles/scss/_Global.scss
@@ -42,7 +42,7 @@ p {
   margin: 5px 0;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (min-height: 768px){
   .container {
     width: 73%;
     padding: 30px 40px;
