--- a/src/styles/scss/_NominationsList.scss
+++ b/src/styles/scss/_NominationsList.scss
@@ -52,7 +52,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (min-height: 768px) {
   .nominations-list {
     display: block;
   }
