--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -514,6 +514,12 @@ p {
   }
 }
 
+@media screen and (min-width: 1024px) {
+  .nominations-list {
+    display: block;
+  }
+}
+
 @media screen and (min-width: 1400px) {
   .nominations-list {
     position: initial;
