--- a/src/styles/scss/_MovieList.scss
+++ b/src/styles/scss/_MovieList.scss
@@ -1,97 +1,14 @@
 /* Movie List styling ******************************************/
 .movie-list {
   display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, 145px);
+  justify-content: space-around;
   margin: 30px 0;
-  grid-template-columns: repeat(auto-fill, minmax(32%, 1fr));
-  grid-gap: 20px 10px;
 }
 
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 988px) {
   .movie-list {
-    grid-template-columns: repeat(auto-fill, minmax(45%, 1fr));
-    grid-gap: 30px 10%;
-  }
-}
-
-/* surface pro screen size */
-@media screen and (min-width: 540px) {
-  .movie-list {
-    grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
-  }
-}
-
-@media screen and (min-width: 576px) {
-  .movie-list {
-    grid-template-columns: repeat(auto-fill, minmax(31%, 1fr));
-  }
-}
-
-@media screen and (min-width: 576px) and (min-height: 576px) {
-  .movie-list {
-    grid-template-columns: repeat(auto-fill, minmax(31%, 1fr));
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .movie-list {
-    grid-template-columns: repeat(auto-fill, minmax(23%, 1fr));
-  }
-}
-
-//Mobile portrait mode styling
-@media screen and (min-width: 375px) and (max-height: 450px) {
-  .movie-list {
-    grid-template-columns: repeat(auto-fill, minmax(45%, 1fr));
-    grid-gap: 30px 10%;
-  }
-}
-
-/* surface pro screen size */
-@media screen and (min-width: 540px) and (max-height: 720px) {
-  .movie-list {
-    grid-template-columns: repeat(auto-fill, minmax(17%, 1fr));
-    grid-gap: 30px 4%;
-  }
-}
-
-@media screen and (min-width: 576px) and (max-height: 450px) {
-  .movie-list {
-    grid-template-columns: repeat(auto-fill, minmax(22%, 1fr));
-    grid-gap: 30px 4%;
-  }
-}
-
-@media screen and (min-width: 720px) and (max-height: 550px) {
-  .movie-list {
-    grid-template-columns: repeat(auto-fill, minmax(22%, 1fr));
-    grid-gap: 30px 4%;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-height: 450px) {
-  .movie-list {
-    grid-template-columns: repeat(auto-fill, minmax(12%, 1fr));
-    grid-gap: 30px 6%;
-  }
-}
-//*******************************************
-
-@media screen and (min-width: 1024px) {
-  .movie-list {
-    grid-template-columns: repeat(auto-fill, minmax(15%, 1fr));
-    grid-gap: 29px 7%;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .movie-list {
-    grid-template-columns: repeat(auto-fill, minmax(10%, 1fr));
-    grid-gap: 29px 9%;
-  }
-}
-
-@media screen and (min-width: 1400px) {
-  .movie-list {
-    grid-gap: 50px 10%;
+    justify-content: space-between;
   }
 }
