--- a/src/styles/scss/_MobileNominationsDrawer.scss
+++ b/src/styles/scss/_MobileNominationsDrawer.scss
@@ -1,20 +1,20 @@
 /*Mobile Nominations Drawer styling ***************************************** */
 .navbar {
-  position: fixed;
-  z-index: 1;
-  display: flex;
-  width: 100%;
-  height: 60px;
   background-color: white;
   background-color: transparent;
+  display: flex;
   flex-direction: row-reverse;
+  height: 60px;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
   .MuiButton-root {
-    padding: 6px 23px;
     color: rgb(0, 0, 0);
+    padding: 6px 23px;
   }
   .MuiButtonBase-root {
-    display: inline-flex;
     align-items: flex-end;
+    display: inline-flex;
   }
   .MuiBadge-anchorOriginTopRightRectangle {
     transform: scale(1) translate(25%, -25%);
@@ -23,17 +23,17 @@
     font-size: 1rem;
   }
   .MuiSvgIcon-root {
-    width: 1.2em;
-    height: 1.2em;
-    padding: 5px;
     background-color: white;
     border-radius: 50px;
+    height: 1.2em;
+    padding: 5px;
+    width: 1.2em;
   }
 }
 
 .MuiDrawer-paper {
-  width: 85%;
   max-width: 350px;
+  width: 85%;
   h2 {
     margin: 15px 15px 0;
   }
@@ -41,10 +41,11 @@
     color: black;
   }
   img {
-    max-width: 53px;
+    border-radius: 7px;
     height: 78px;
     margin-top: auto;
-    border-radius: 7px;
+    max-width: 53px;
+    object-fit: cover;
   }
   .no-nominations {
     p {
@@ -53,7 +54,7 @@
   }
 }
 
-@media screen and (min-width: 576px) and (min-height: 576px) {
+@media only screen and (min-width: 768px) and (min-height: 768px), (min-width: 1024px) {
   .navbar {
     display: none;
   }
