--- a/src/styles/scss/_MovieDetails.scss
+++ b/src/styles/scss/_MovieDetails.scss
@@ -1,31 +1,33 @@
 /*Movie Details styling *******************************************/
 .movie-details {
-  display: flex;
-  width: 100%;
   color: white;
+  display: flex;
   flex-direction: column;
   text-overflow: ellipsis;
+  width: 100%;
   img {
-    width: 100%;
-    height: 220px;
     border-radius: 7px;
+    height: 220px;
+    object-fit: cover;
+    width: 100%;
   }
   button {
-    display: flex;
-    height: fit-content;
-    padding: 4px;
+    align-items: center;
     background-color: transparent;
-    color: rgb(15, 146, 11);
-    font-family: "Nunito Sans", sans-serif;
-    font-size: 1rem;
-    font-weight: 600;
-    text-align: center;
-    border-style: solid;
     border-color: rgb(15, 146, 11);
     border-image: none;
     border-radius: 5px;
+    border-style: solid;
+    color: rgb(15, 146, 11);
+    display: flex;
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 1rem;
+    font-weight: 600;
+    height: fit-content;
     justify-content: space-evenly;
-    align-items: center;
+    padding: 4px;
+    text-align: center;
+
     p {
       margin: 0px;
     }
@@ -36,50 +38,22 @@
     &:disabled,
     &[disabled] {
       background-color: rgb(140, 141, 140);
+      border-color: rgb(140, 141, 140);
       color: #1f1c1c;
       opacity: 0.7;
-      border-color: rgb(140, 141, 140);
     }
   }
   .details {
     display: flex;
-    height: 115px;
     flex-direction: column;
+    height: 115px;
     justify-content: space-between;
     .title {
+      -webkit-box-orient: vertical;
       display: -webkit-box;
-      overflow: hidden;
       height: 53px;
       -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
+      overflow: hidden;
     }
-  }
-}
-
-@media screen and (min-width: 375px) {
-}
-
-/* surface pro screen size */
-@media screen and (min-width: 540px) {
-  .movie-details img {
-    height: 200px;
-  }
-}
-
-@media screen and (min-width: 576px) {
-}
-
-@media screen and (min-width: 768px) {
-}
-
-@media screen and (min-width: 1024px) {
-  .movie-details img {
-    height: 188px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .movie-details img {
-    height: 161px;
   }
 }
