--- a/src/styles/scss/_NominationsList.scss
+++ b/src/styles/scss/_NominationsList.scss
@@ -1,51 +1,52 @@
 .nominations-list {
+  color: white;
+  display: none;
+  padding: 10px 10px 0 0;
   position: fixed;
   right: 10px;
-  display: none;
   width: 25%;
-  padding: 10px 10px 0 0;
-  color: white;
 
   img {
-    max-width: 53px;
+    border-radius: 7px;
     height: 78px;
     margin-top: auto;
-    border-radius: 7px;
+    max-width: 53px;
+    object-fit: cover;
   }
   button {
-    display: inline-flex;
-    height: fit-content;
+    align-items: center;
     background-color: transparent;
-    color: rgb(15, 146, 11);
-    font-family: "Nunito Sans", sans-serif;
-    font-size: 1rem;
-    text-align: center;
-    border-style: solid;
     border-color: rgb(15, 146, 11);
     border-image: none;
     border-radius: 5px;
+    border-style: solid;
+    color: rgb(15, 146, 11);
+    display: inline-flex;
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 1rem;
+    height: fit-content;
     justify-content: space-evenly;
-    align-items: center;
+    text-align: center;
     p {
       margin: 0;
     }
   }
-  .title{
-      display: flex;
+  .title {
+    display: flex;
   }
 
   .button p {
     display: inline;
   }
   .empty-box {
-    max-width: 100%;
-    height: 150px;
     color: antiquewhite;
+    height: 150px;
+    max-width: 100%;
   }
   .details {
     display: flex;
-    margin: 0 10px;
     flex-direction: column;
+    margin: 0 10px;
   }
   .nomination {
     display: flex;
@@ -66,7 +67,7 @@
 
 @media screen and (min-width: 1400px) {
   .nominations-list {
-    position: initial;
     padding: 40px 10px 0 20px;
+    position: initial;
   }
 }
